Added dedicated files for header and sections

--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,18 @@ inputs:
   imageAltText:
     description: 'Optional imageAltText. Alternative in case the image cannot be shown.'
     required: false
+  createSection:
+    description: 'Optional createSection. Specify whether the section should be shown or not.'
+    required: false
+    default: 'true'
+  collapsibleSection:
+    description: 'Optional collapsibleSection. Specify whether the section is collapsible.'
+    required: false
+    default: 'true'
+  uncollapsibleWidgetsCount:
+    description: 'Optional uncollapsibleWidgetsCount. Specify the amount of uncollapsible widgets within the sections.'
+    required: false
+    default: '1'
 
 runs:
   using: node20
