--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,10 @@ inputs:
     description: 'Optional uncollapsibleWidgetsCount. Specify the amount of uncollapsible widgets within the sections.'
     required: false
     default: '1'
+  additionalSections:
+    description: 'Add the opportunity to have additional sections.'
+    required: false
+    default: '[]'
 
 runs:
   using: node20
