--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,4 +54,4 @@ jobs:
         uses: ./
         with:
           webhookUrl: 'https://httpbin.org/status/200'
-          additionalSections: '[{"header": "Contact Info"}]'
+          #additionalSections: '[{"header": "Contact Info"}]'
