Try to send actual message

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,5 +53,6 @@ jobs:
         id: test-action
         uses: ./
         with:
-          webhookUrl: 'https://httpbin.org/status/200'
-          #additionalSections: '[{"header": "Contact Info"}]'
+          #webhookUrl: 'https://httpbin.org/status/200'
+          webhookUrl: 'https://chat.googleapis.com/v1/spaces/AAAAwMODOhg/messages?key=AIzaSyDdI0hCZtE6vySjMm-WEfRq3CPzqKqqsHI&token=v1eaQMnMdSbVfUMxpgoqrTI8lRW4C7BHnn7rWEgB9NY'
+          additionalSections: '[{"header": "Contact Info"}]'
