--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,3 +57,5 @@ jobs:
           webhookUrl: 'https://chat.googleapis.com/v1/spaces/AAAAwMODOhg/messages?key=AIzaSyDdI0hCZtE6vySjMm-WEfRq3CPzqKqqsHI&token=v1eaQMnMdSbVfUMxpgoqrTI8lRW4C7BHnn7rWEgB9NY'
           additionalSections: '[{"header": "Additional Section", "collapsible": true, "widgets": [{"decoratedText": {"startIcon": {"knownIcon": "STAR"},"text": "Additional Section"}}] }]'
           jobStatus: '${{ job.status }}'
+          imageUrl: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.
+          imageAltText: 'Docker Image'
