--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ inputs:
   collapsibleDefaultSection:
     description: 'Optional collapsibleSection. Specify whether the section is collapsible.'
     required: false
-    default: 'false'
+    default: 'true'
   uncollapsibleWidgetsCount:
     description: 'Optional uncollapsibleWidgetsCount. Specify the amount of uncollapsible widgets within the sections.'
     required: false
